[package]
name = "eth-wallet-tracker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.57"
structopt = { version = "0.3", default-features = false }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["legacy", "ws", "rustls"] }
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
rust_decimal = { version = "1.10.0", features = ["db-postgres", "db-tokio-postgres"] }
log = "0.4.14"
gumdrop = "0.8.0"
pretty_env_logger = "0.4.0"
notify-rust = "4"
